LE-38 Address feedback received from UAT testing
See ticket for full list of issues resolved